--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
 
-    <style name="Theme.Burnify" parent="android:Theme.Material.Light.NoActionBar" />
+<resources>
+<style name="Theme.Burnify" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Your theme customizations here -->
+</style>
 </resources>
