--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="15dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -101,12 +102,11 @@
             android:visibility="gone" />
     </LinearLayout>
 
-    <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/bottom_nav_background"
+        android:background="@drawable/round_bottom_nav"
         app:menu="@menu/bottom_nav_menu"
         app:itemIconTint="@color/colorPrimary"
         app:itemTextColor="@color/colorAccent"
@@ -114,6 +114,10 @@
         app:itemBackground="@drawable/bottom_nav_item_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:elevation="8dp"
+        android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
