--- a/app/src/main/res/layout/settings_screen.xml
+++ b/app/src/main/res/layout/settings_screen.xml
@@ -116,9 +116,16 @@
             android:text="Female" />
     </RadioGroup>
     <Button
-        android:id="@+id/updateButton"
+    android:id="@+id/updateButton"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Save" />
+
+    <Button
+        android:id="@+id/stop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save" />
+        android:text="Stop "
+        android:layout_marginTop="16dp"/>
 
 </LinearLayout>
