--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <!-- Exit item -->
     <item
         android:id="@+id/action_exit"
         android:title="Exit"
         android:icon="@drawable/close"
-        app:showAsAction="ifRoom" />
+    android:tooltipText="Stop Tracking"
+    app:showAsAction="ifRoom" />
+
 </menu>
+
 
 
