--- a/app/src/main/res/layout/settings_screen.xml
+++ b/app/src/main/res/layout/settings_screen.xml
@@ -125,7 +125,7 @@
         android:id="@+id/stop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Stop "
+        android:text="Stop movement detection"
         android:layout_marginTop="16dp"/>
 
 </LinearLayout>
