--- a/app/src/main/res/layout/data_screen.xml
+++ b/app/src/main/res/layout/data_screen.xml
@@ -7,7 +7,6 @@
     tools:context=".ui.screens.DataScreen">
 
     <!-- Prediction Card -->
-
     <androidx.cardview.widget.CardView
         android:id="@+id/predictionCard"
         android:layout_width="0dp"
@@ -48,16 +47,17 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/recentActivitiesCard"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:cardElevation="8dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/predictionCard"
-        android:layout_marginBottom="400dp"
+        app:layout_constraintHeight_default="wrap"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp">
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
